Version 1.3.13+svn:
 * language and i18n:
   * updated translations: Chinese, Lithuanian
 * user interface
   * the apple key works a shortcut modifier again (bug #10586)
 * sound:
   * timer bell in MP starts when there are 20 seconds left and fades in
     gradually for 10 seconds (fr #10559)
   * fixed timer bell not always playing (bug #10559)

Version 1.3.13:
 * campaigns:
   * A Tale of Two Brothers:
     * what the correct passwords for 'Guarded Castle' are is now randomized
   * Liberty:
     * 'Hide and Seek' mostly rewritten and it now has a bigger map with
       randomly placed guards
   * The South Guard:
     * now the player has to kill the fake M'Brin in 'Choice in the Fog' instead
       of just attacking once
 * language and i18n:
   * updated translations: Chinese, Czech, Danish, Finnish, French, German,
     Greek, Hungarian, Italian, Lithuanian, Polish, Portuguese (Brazil),
     Valencian
   * updated DejaVuSans to 2.22
 * map editor:
   * resize actions can be undone again (bug #10216)
 * multiplayer:
   * revised maps: Hamlets
   * recruitment OOS is fatal now (bug #9723)
   * the server now stores the next scenario send but the host, thus the
     clients no longer restart in the previous scenario
   * the next scenario now properly loads the recall list     
 * sound:
   * new or improved sounds: ogre hit and die, MP chat
 * units:
   * all lvl 2 outlaw units can now advance to lvl 3 in all campaigns and MP
   * the default AMLA for all max-level units is now +3 max HP, +20% max XP and
     healing to full
   * the standard AMLA XP limit upped from 100 to 150
   * replaced the fullheal AMLA of the Necrophage with a feeding ability, giving
     it +1 max HP for every living enemy killed
 * user interface
   * display the race in the unit preview panel (with gender variation support).
   * allow to use team labels also for 1-player-teams (bug #9747)
   * changing the langugage now sets the version number in the title
     properly.